--- a/views/index.html
+++ b/views/index.html
@@ -49,8 +49,9 @@
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
           </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
+          <form action="/students/search" method="get" class="navbar-form navbar-right">
+            <input type="text" class="form-control" placeholder="搜索学生姓名" name="search" value="">
+            <button type="submit" class="btn btn-default">搜索</button>
           </form>
         </div>
       </div>
